# simview

./: .gitignore~  README.md  pyproject.toml
examples/: basic_contour.py  basic_contour.py~  batch_contours.py  batch_contours.py~  create_animation.py  field_with_structure.py  history_viewer.py  run_simview_chicago.py
src/simview/: __init__.py  __init__.py~  contour_plot.py  draw_struct.py  draw_struct_bak.py  filters.py  get_plot_limits.py  history_plots.py  history_utils.py  lineout.py  lineout_plot.py  make_batch_contours.py  make_gif.py  structure.py  utils.py
src/simview.egg-info/: PKG-INFO  SOURCES.txt
src/simview/tests/: test_contour_plot.py  test_draw_struct.py  test_simview_api.py
