[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simview"
version = "0.1.0"
description = "generic plotting functions for simulation data"
authors = [
    { name = "Stephen Swanekamp" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "imageio"
    ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
